<resources>
    <string name="app_name">Horror Story App</string>
    <string name="welcome_title">Selamat Datang di Horry Story App</string>
    <string name="welcome_desc">Kunci pintu Anda, duduklah di tempat yang paling nyaman, matikan lampu, dan siapkan diri Anda untuk membaca cerita-cerita yang penuh dengan misteri di luar pemahaman manusia.</string>
    <string name="name">Nama Anda</string>
    <string name="email">Email Anda</string>
    <string name="password">Password Anda</string>
    <string name="text_btn_register">Daftar</string>

    <string name="login_tit_dialog">Login Berhasil</string>
    <string name="login_con_dialog">Ceritakanlah cerita seremmu itu!!!</string>

    <string name="login_tit_dialogerr">Login Gagal</string>
    <string name="login_con_dialogerr">Coba cek lagi Email &amp; Password kamu yaa!!!</string>

    <string name="item_txt_loading">Sesi Expired</string>
    <string name="item_btn_loading">Coba Lagi</string>

    <string name="detail_desc">Tuliskan Ceritamu disini</string>
    <string name="add_btn_camera">Kamera</string>
    <string name="add_btn_gallery">Galeri</string>
    <string name="lokasi_add">Lokasi</string>
    <string name="add_btn_upload">Upload</string>
    <string name="location_permission_denied">Izin Lokasi tidak diizinkan</string>
    <string name="location_permission_denied_action">Ubah Pengaturan</string>

    <string name="add_success_upload">Upload Berhasil</string>
    <string name="add_thankyou_fsharing">Terimakasih telah membagikan cerita seremmu</string>
    <string name="add_failed_upload">Upload Gagal</string>
    <string name="add_check_again">Coba cek lagi data kamu yaa!</string>


    <string name="registration_success">Registrasi Berhasil</string>
    <string name="registration_createacc_success">Akun berhasil dibuat!</string>
    <string name="registration_failed">Registrasi Gagal</string>
    <string name="registration_email_already_haveacc">Email sudah terdaftar!</string>

    <string name="login_buttonpage">Masuk</string>
    <string name="text_between_button_welcome">Atau</string>
    <string name="signup_buttonpage">Daftar</string>
    <string name="title_signup">Hayooooo Daftar duluu!!!</string>
    <string name="desc_signup">Silahkan lengkapi data berikut</string>
    <string name="title_login">Sudah siap membaca dan berbagi cerita yang membuat bulu kuduk merinding?</string>
    <string name="desc_login">Lessgooo login dulu yaa!!!</string>
    <string name="email_login">Email</string>
    <string name="pass_login">Password</string>

    <string name="login_msg_bottom">Belum punya akun?</string>
    <string name="login_msg_bottom2">Daftar</string>
    <string name="username">Nama Anda</string>
    <string name="lokasi">Lokasi Anda</string>
    <string name="Waktu">15/11/23, 10:30:00</string>

    <string name="greeting">Selamat Datang,</string>
    <string name="tv_name">Para Penggemar Cerita Horror</string>
    <string name="tv_profile">User</string>
    <string name="add_new_story">Tambah Cerita Baru</string>
    <string name="example_desc">Disuatu malam yang sepi dan sunyi, aku mendadak lapar dimalam hari, kemudian aku ke dapur dan melihat ada sesosok wujud hitam di depan kompor.</string>
    <string name="detail_image">Detail Gambar</string>
    <string name="btn_back_detail">Button back ke halaman Home</string>

    <string name="home_navtext">Home</string>
    <string name="Map_navtext">Map</string>
    <string name="Profile_navtext">Profile</string>

    <string name="created_at">15/11/23, 10:30:00</string>
    <string name="detail_story">Detail Cerita</string>

    <string name="HorryApp_title">CeritaSeremku</string>
    <string name="profile_appbar">Profile saya</string>
    <string name="languange_settings">Ganti Bahasa</string>
    <string name="logout_app">Keluar Aplikasi</string>

    <string name="language_title_dialog">Ganti Bahasa</string>
    <string name="language_option_dialog">Yakin ingin mengganti bahasa ?</string>

    <string name="signup_msg_bottom">Sudah punya akun?</string>
    <string name="signup_msg_bottom2">Masuk</string>

    <string name="logout_alert">Yakin ingin melakukan Logout?</string>
    <string name="logout_title">Keluar</string>

    <string name="iv1_content_desc_camera">Ambil Foto</string>
    <string name="iv2_content_desc_camera">Tutup Kamera</string>
    <string name="iv3_content_desc_camera">Ganti Kamera</string>

    <string name="iv1_content_desc_add">Tambahkanlah foto kamu</string>
    <string name="iv2_content_desc_add">Kembali ke Home</string>
    <string name="iv3_content_desc_add">Aktifkan lokasimu</string>
    <string name="btn1_content_desc_add">Dapatkan foto dengan kamera</string>
    <string name="btn2_content_desc_add">Dapatkan foto dengan galeri</string>
    <string name="btn3_content_desc_add">Upload Story</string>

    <string name="iv2_content_desc_item">Hasil Upload Foto</string>
    <string name="iv3_content_desc_item">Foto Profil User</string>

    <string name="iv1_content_desc_profile">Foto Profil User</string>
    <string name="btn1_content_desc_profile">Mengganti Bahasa</string>
    <string name="btn2_content_desc_profile">keluar Aplikasi</string>

    <string name="btn1_content_desc_welcome">Login</string>
    <string name="btn2_content_desc_welcome">SignUp</string>

    <string name="btn1_content_desc_signup">Registrasi akun</string>
    <string name="btn2_content_desc_signup">Login</string>

    <string name="iv1_content_desc_login">Kembali ke home</string>
    <string name="iv3_content_desc_login">Menampilkan/menyembunyikan password</string>
    <string name="btn1_content_desc_login">Masuk ke aplikasi</string>
    <string name="btn2_content_desc_login">SignUp</string>

    <string name="iv1_content_desc_language">Kembali ke profile</string>
    <string name="btn1_content_desc_language">Ganti Bahasa Indonesia</string>
    <string name="btn2_content_desc_language">Ganti Bahasa Inggris</string>
    <string name="btn3_content_desc_language">Ganti bahasa Jepang</string>
    <string name="btn4_content_desc_language">Ganti Bahasa Arab</string>
    <string name="btn5_content_desc_language">Ganti Bahasa Germany</string>
    <string name="btn6_content_desc_language">Ganti bahasa France</string>

    <string name="tv_indonesia_language">Indonesia</string>
    <string name="tv_English_language">Inggris</string>
    <string name="tv_Japan_language">Japan</string>
    <string name="tv_Arab_language">Arab</string>
    <string name="tv_Germany_language">Germany</string>
    <string name="tv_France_language">France</string>

    <string name="txt_ok">Ok</string>
    <string name="txt_cancel">Batal</string>

    <string name="btn_zoomin_map">+</string>
    <string name="btn_zoomout_map">-</string>
    <string name="btnback_map">Kembali</string>

    <string name="btn_showtext_map">Pilihan Peta</string>

    <string name="ib_terrain">Terrain</string>
    <string name="ib_hybrid">Hybrid</string>
    <string name="ib_default">Default</string>
    <string name="ib_satellite">Satellite</string>

</resources>