<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    tools:context=".user_ui_page.add.AddStoryActivity">



    <ImageView
        android:id="@+id/add_image"
        android:layout_width="0dp"
        android:layout_height="284dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/iv1_content_desc_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_add_story" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="27dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image">

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:background="@color/color_secondary"
            android:fontFamily="@font/font4_comic"
            android:contentDescription="@string/btn1_content_desc_add"
            android:text="@string/add_btn_camera"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="316dp" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_galeri"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:background="@color/color_secondary"
            android:contentDescription="@string/btn2_content_desc_add"
            android:fontFamily="@font/font4_comic"
            android:text="@string/add_btn_gallery"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="27dp"
        android:background="@color/color_secondary"
        android:fontFamily="@font/font4_comic"
        android:contentDescription="@string/btn3_content_desc_add"
        android:text="@string/add_btn_upload"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <ImageView
        android:id="@+id/btnback_add"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/iv2_content_desc_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <ProgressBar
        android:id="@+id/add_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/color_primary"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <EditText
        android:id="@+id/txt_desc"
        android:layout_width="0dp"
        android:layout_height="177dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/bg_color_input"
        android:ems="10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        android:fontFamily="@font/font2_poppins_regular"
        android:gravity="start|top"
        android:hint="@string/detail_desc"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lokasi_add"
        android:textColor="@color/white"
        android:contentDescription="@string/iv3_content_desc_add"
        app:thumbTint="@drawable/thumb"
        app:trackTint="@drawable/track"
        app:layout_constraintEnd_toEndOf="@+id/txt_desc"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_desc"
        app:layout_constraintTop_toBottomOf="@+id/txt_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>